<resources>
    <string name="app_name">Lựa Xe</string>
    <string name="processing">Processing</string>

    <string name="description_share_app">I\'m using the %s ! Try it now! %s</string>
    <string name="description_share_app_link" translatable="false">https:\/\/play.google.com\/store\/apps\/details?id=%s</string>
    <string name="upgrade_to_the_newest_version">Nâng cấp lên phiên bản mới nhất</string>
    <string name="description_update_version">Cửa hàng Google có phiên bản mới nhất với các tính năng mới hấp dẫn.</string>
    <string name="upgrade">Nâng cấp</string>
    <string name="title_later">Lúc khác</string>
    <string name="home">Trang chủ</string>
    <string name="setting">Cài đặt</string>
    <string name="nation">Quốc gia</string>
    <string name="search_hint">Tìm kiếm tên hãng,loại xe</string>
    <string name="hang_xe">Hãng xe</string>
    <string name="more">Xem thêm</string>
    <string name="danh_sach_luu">Danh sách lưu</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="model" translatable="false">Model</string>
    <string name="mitsubishi">Mitsubishi</string>
    <string name="toyota">Toyota</string>
    <string name="honda">Toyota</string>
    <string name="all">Tất cả</string>
    <string name="huyndai">Huyndai</string>
    <string name="kia">Kia</string>
    <string name="time">Thời gian</string>
    <string name="price">Giá tiền</string>
    <string name="name">Name</string>
    <string name="from_oldest_to_newest">Từ cũ đến mới</string>
    <string name="new_to_old">Từ mới đến cũ</string>
    <string name="price_ex_to_cheap">Giá cao đến thấp</string>
    <string name="price_cheap_to_ex">Giá thấp đến cao</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="sort">Sắp xếp</string>
    <string name="rate_us">Đánh giá ứng dụng</string>
    <string name="feedback_car">Gửi phản hồi</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="term_of_use">Điều khoản sử dụng</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="exit">Thoát</string>
    <string name="danh_gia_ung_dung">Đánh giá ứng dụng</string>
    <string name="we_are_trying_to_make_the_app_better">Chúng tôi sẽ cố gắng hoàn thiện hơn</string>
    <string name="later">Lần sau</string>
    <string name="rate">Đánh giá</string>
    <string name="engineType">Loại động cơ</string>
    <string name="transmissionType">Loại hộp số</string>
    <string name="fuelType">Loại nhiên liệu</string>
    <string name="numOfDoors">Số lượng cửa</string>
    <string name="numOfSeats">Số ghế ngồi</string>
    <string name="length">Chiều dài</string>
    <string name="width">Chiều rộng</string>
    <string name="height">Chiều cao</string>
    <string name="undercarriageDistance">Khoảng cách gầm xe</string>
    <string name="airBag">Số túi khí</string>
    <string name="headlights">Loại Đèn pha</string>
    <string name="HT">Hệ thống riêng của xe</string>
    <string name="brake">Phanh xe</string>
    <string name="airConditionType">Điều hòa</string>
    <string name="chairMaterial">Chất liệu ghế</string>
    <string name="BSW">Hệ thống cảnh báo điểm mù</string>
    <string name="RCTA">Hệ thống cảnh báo phương tiện cắt ngang khi lùi xe</string>
    <string name="LCDN">Hệ thống cảnh báo phương tiện phía trước khởi hành</string>
    <string name="ABS">Hệ thống chống bó cứng phanh</string>
    <string name="VRS">Cảm biến phía sau xe</string>
    <string name="WPCS">Sạc không dây</string>
    <string name="search">Tìm kiếm</string>
    <string name="time_update_data" translatable="false">Update to 2024</string>
    <string name="using_reward">Nhận phần thưởng</string>
    <string name="watch_a_short_video_to">Xem quảng cáo ngắn dể nhận phần thưởng</string>
    <string name="upgrade_to_premium_member_to_">Trở thành member sẽ mở khóa hết tính năng</string>
    <string name="ad_is_start_in">Ad is start in %ss …</string>
    <string name="upgrade_premium">Thành viên</string>
    <string name="error_load_ads">Không tải được quảng cáo</string>
    <string name="comming_soon">Đang hoàn thiện</string>
    <string name="wait">Xin đợi</string>
    <string name="comment_issue">Phản hồi của bạn</string>
    <string name="str_title_send">Gửi</string>
    <string name="str_title_feed_back">Phản hồi</string>
    <string name="next">Tiếp theo</string>
    <string name="compare_select_mode" >Chọn xe để so sánh</string>
    <string name="exit_mode_compare">Hủy chọn</string>
    <string name="inSelect">Đã chọn</string>
    <string name="inNonSelect">Chưa chọn</string>
    <string name="compare">So sánh</string>
    <string name="detail">Chi tiết</string>
    <string name="no_internet">Không có kết nối mạng</string>
    <string name="no_notification">Hiện không có thông báo</string>
    <string name="notification">Thông báo</string>
    <string name="danh_sach_xe">Danh sách</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="no_data_suit">Không có kết quả phù hợp</string>
    <string name="data_with_tax">Dự tính chi phí phụ</string>
    <string name="done">Xong</string>

    <string name="listed_price">Giá niêm yết</string>
    <string name="registration">Phí đăng ký</string>
    <string name="license_plate">Phí biển số</string>
    <string name="road_maintenance">Phí bảo trì đường bộ 1 năm</string>
    <string name="civilLiability_insurance">Bảo hiểm trách nhiệm dân sự</string>
    <string name="registration_certificateFee">Phí chứng nhận đăng ký</string>
    <string name="price_sum">Tổng : %s</string>
    <string name="unit_price">Mệnh giá</string>
    <string name="selection">Lựa chọn</string>
    <string name="fee">Chi phí</string>
    <string name="car_type">Loại xe</string>
    <string name="type">Loại xe</string>
    <string name="oil_or_gas">Dầu, xăng</string>
    <string name="hybrid">hybrid</string>
    <string name="electric">Điện</string>
    <string name="price_lever">Mức giá</string>
    <string name="low">Thấp</string>
    <string name="medium">Vừa</string>
    <string name="high">Đầy đủ</string>
    <string name="bottom_car">Kiểu gầm xe</string>
    <string name="bottom_high">Gầm cao</string>
    <string name="bottom_low">Gầm thấp</string>
    <string name="convenient">Tiện nghi</string>
    <string name="car_suitable">Xe phù hợp</string>
    <string name="speakers_system">Hệ thống loa</string>
    <string name="entertainmentScreen">Màn hình giải trí</string>
    <string name="install">Cài đặt</string>
</resources>