<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        style="@style/TextFeature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocation"
        style="@style/TextFeature1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_down"
        android:drawablePadding="6dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        tools:text="@string/nation" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNotification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ac_notification" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TextFeature2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_1"
        android:layout_marginEnd="24dp"
        android:text="@string/search_hint"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toStartOf="@+id/appCompatImageView"
        app:layout_constraintStart_toStartOf="@+id/tvLocation"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="@+id/ivNotification"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        app:srcCompat="@drawable/ic_filter" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        style="@style/TextFeature1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hang_xe"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMore"
        style="@style/TextFeature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/more"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2" />
</androidx.constraintlayout.widget.ConstraintLayout>