<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_1"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingBottom="26dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextFeature1"
                android:id="@+id/tvTitleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/using_reward"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/btn_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="?selectableItemBackgroundBorderless">

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_close"
                    app:tint="@color/black" />
            </FrameLayout>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_main"
            android:layout_marginTop="@dimen/margin_main">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_premium_check" />

            <TextView
                android:id="@+id/tv1"
                style="@style/TextFeature4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/upgrade_to_premium_member_to_" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_main"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_premium_check" />

            <TextView
                style="@style/TextFeature4"
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watch_a_short_video_to"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_watch_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCountDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_gradient_1"
                android:enabled="true"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:text="@string/ad_is_start_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivWatchAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_watch_ad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_become_vip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_border_8"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/upgrade_premium"
            android:textAllCaps="false" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_loading"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:cardBackgroundColor="#282F41"
        app:cardCornerRadius="10dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="#ACC8FF" />

    </androidx.cardview.widget.CardView>

</FrameLayout>