<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_1"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingBottom="26dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleGroup"
                style="@style/TextFeature1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/data_with_tax"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/btn_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="?selectableItemBackgroundBorderless">

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_close"
                    app:tint="@color/black" />
            </FrameLayout>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_main"
            android:layout_marginTop="@dimen/margin_main">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_premium_check" />

            <Spinner
                android:layout_marginStart="14dp"
                android:id="@+id/match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingHorizontal="@dimen/margin_main">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="14dp"
                android:lines="2"
                android:maxLines="2"
                android:paddingVertical="6dp"
                android:text="@string/listed_price"
                android:textColor="@color/color3"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvListedPrice"
                style="@style/TextFeature2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/tv1"
                tools:text="1.000.000 vnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingVertical="6dp"
                android:text="@string/registration"
                android:textColor="@color/color3"
                android:lines="2"
                android:maxLines="2"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegistration"
                style="@style/TextFeature2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/tv2"
                tools:text="1.000.000 vnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingVertical="6dp"
                android:text="@string/license_plate"
                android:textColor="@color/color3"
                android:textSize="14sp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                android:lines="2"
                android:maxLines="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLicensePlate"
                style="@style/TextFeature2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/tv3"
                tools:text="1.000.000 vnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingVertical="6dp"
                android:gravity="center_vertical"
                android:text="@string/road_maintenance"
                android:textColor="@color/color3"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                android:lines="2"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@+id/tv3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRoadMaintenance"
                style="@style/TextFeature2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/tv4"
                tools:text="1.000.000 vnd" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingVertical="6dp"
                android:text="@string/civilLiability_insurance"
                android:textColor="@color/color3"
                android:gravity="center_vertical"
                android:lines="2"
                android:maxLines="2"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCivilLiabilityInsurance"
                style="@style/TextFeature2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/tv5"
                tools:text="1.000.000 vnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv6"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingVertical="6dp"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/registration_certificateFee"
                android:textColor="@color/color3"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegistrationCertificate"
                style="@style/TextFeature2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/tv6"
                tools:text="1.000.000 vnd" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_watch_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCountDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:enabled="true"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:text="@string/price_sum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_become_vip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_2"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/done"
            android:textAllCaps="false" />

    </LinearLayout>

</FrameLayout>